--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,10 @@
 # Site navigation links
 
-- title: Projects
-  url: /projects/
+- title: Calculus 3 Summer 2020
+  url: /MA-213-SU2020/
+- title: All Courses
+  url: /all-courses/
+- title: Research
+  url: /research/
+- title: CV
+  url: /cv/
