--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
-title:              Moon
-bio:                'Minimal, one column jekyll theme.'
-description:        "Moon is a minimal, one column jekyll theme for your blog."
+title:              Jay White
+bio:                'Here is a sentance about me.'
+description:        "Here is a short description about me."
 reading_time:       false
 logo:               'assets/img/logo.png'
 background:         'assets/img/placeholder-big.jpg'
