--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ bio:                'Here is a sentance about me.'
 description:        "Here is a short description about me."
 reading_time:       false
 logo:               'assets/img/logo.png'
+portrait:           'assets/img/portrait.png'
 background:         'assets/img/placeholder-big.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
