--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,10 @@
 # Site
 title:              Jay White
-bio:                'Here is a sentance about me.'
-description:        "Here is a short description about me."
-reading_time:       false
+bio:                'A few words about me.'
+description:        "Here is a short description about me. Probably more than one sentence."
 logo:               'assets/img/logo.png'
 portrait:           'assets/img/portrait.png'
 background:         'assets/img/placeholder-big.jpg'
-tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
 url:                https://JayWhite2357.github.io
 
