--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ bio:                'A few words about me.'
 description:        "Here is a short description about me. Probably more than one sentence."
 logo:               'assets/img/logo.png'
 portrait:           'assets/img/portrait.png'
-background:         'assets/img/placeholder-big.jpg'
+background:         'assets/img/background.jpg'
 locale:             en_US
 url:                https://JayWhite2357.github.io
 
