--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title:              Jay White
 bio:                'A few words about me.'
 description:        "Here is a short description about me. Probably more than one sentence."
 logo:               'assets/img/logo.png'
-portrait:           'assets/img/portrait.png'
+portrait:           'assets/img/portrait.jpg'
 background:         'assets/img/background.jpg'
 locale:             en_US
 url:                https://JayWhite2357.github.io
