--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # Site navigation links
 
-- title: Calculus 3 Summer 2020
-  url: /MA-213-SU2020/
+- title: Calc 3
+  url: /MA213SU2020/
 - title: All Courses
   url: /all-courses/
 - title: Research
