--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 title:              Jay White
-bio:                'A few words about me.'
-description:        "Here is a short description about me. Probably more than one sentence."
+bio:                'Teacher, Learner, Husband, Follower'
+description:        "I teach math. I learn math. I love my wife. I follow Christ."
 logo:               'assets/img/logo.png'
 portrait:           'assets/img/portrait.jpg'
 background:         'assets/img/background.jpg'
