--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              Jay White
-bio:                'Teacher, Learner, Husband, Follower'
+bio:                'Teacher, Learner, Husband, Disciple'
 description:        "I teach math. I learn math. I love my wife. I follow Christ."
 logo:               'assets/img/logo.png'
 portrait:           'assets/img/portrait.jpg'
