--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@
   url: /all-courses/
 - title: Research
   url: /research/
-- title: CV
-  url: /cv/
+- title: Projects
+  url: /projects/
 - title: Contact
   url: /contact/
