--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # Site navigation links
 
-- title: Calc 3
-  url: /MA213SU20/
+- title: College Algebra
+  url: /MA109FA20/
 - title: All Courses
   url: /all-courses/
 - title: Research
